lab-4/canary/overlay/localhost/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: rollouts-demo-stable
spec:
  rules:
  - host: rollouts-canary.kind.cluster
    http:
      paths:
      - backend:
          service:
            name: rollouts-demo-stable
            port:
              number: 80
        path: /
        pathType: Prefix
